# prod-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: README.md  prodkit.agents.md  prodkit.ai-native.md  prodkit.dataflow.md  prodkit.dataflowdiagram.md  prodkit.engineering.md  prodkit.security.md
.claude/skills/prodkit-create-diagram/: SKILL.md
.claude/skills/prodkit-ghflow/: SKILL.md
.specify/scripts/bash/: common.sh  create-new-feature.sh
specs/001-create-diagram-skill/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-diagram-skill/checklists/: requirements.md
specs/001-create-diagram-skill/contracts/: README.md
specs/001-fix-spec-indexing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-spec-indexing/checklists/: requirements.md
specs/001-fix-spec-indexing/contracts/: README.md
specs/002-ai-native-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-native-framework/checklists/: requirements.md
specs/002-ai-native-framework/contracts/: README.md
specs/003-ghflow-rebase-main/: plan.md  research.md  spec.md  tasks.md
specs/003-ghflow-rebase-main/checklists/: requirements.md
specs/004-simplify-readme-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-simplify-readme-install/checklists/: requirements.md
specs/004-simplify-readme-install/contracts/: README.md
src/prodkit/: cli.py
src/prodkit/overlay/claude/commands/: README.md  prodkit.architecture.md  (+7 more)
(+5 files in other folders)
