[project]
name = "prod-kit"
version = "0.1.0"
description = "Prod-Kit overlay tooling for Spec-Kit projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }

authors = [
  { name = "Prod-Kit contributors" }
]

dependencies = []

[project.scripts]
prodkit = "prodkit.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prodkit = ["overlay/**"]
